🐛 Fixes html code block not showing properly

--- a/src/init/static/themes/orion/style.css
+++ b/src/init/static/themes/orion/style.css
@@ -14,8 +14,8 @@ hr:last-of-type { margin-bottom: 2em; }
 small { color: #999; }
 strong, b { background: rgba(255, 255, 255, 0.2); }
 img { display: block; margin: 2em auto; height: auto; max-width: 100%; }
-pre { line-height: 1.5em; padding: 2em; background: #c9cacc; color: #1d1f21; margin: 2em 0; white-space: pre-line; }
-code { background: #c9cacc; color: #1d1f21; padding: 2px }
+pre { line-height: 1.5em; padding: 2em; background: #c9cacc; color: #1d1f21; margin: 2em 0; overflow-x: auto; }
+code { background: #c9cacc; color: #1d1f21; padding: 2px; }
 blockquote { margin: 2em 0; border-left: 2px solid #F35C38; padding: 1em 0 1em 1em; background: rgba(255, 255, 255, 0.1); }
 blockquote p { margin: 0 }
 
